# Nextag-Embedded-Platform

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  check_formatting.sh  format_me.sh  main.cpp  setup_codespace.sh  sonar-project.properties  test_runner.py
.github/workflows/: Build and test locally.yml.disabled  Build and test.yml  sonarqube.yml
chip_descriptions/: ATmega328P.svd
chips/: arduino-uno-config.cmake
examples/: CMakeLists.txt
examples/serial/: CMakeLists.txt
examples/serial/echo/: CMakeLists.txt  main.cpp
examples/serial/hello_world/: CMakeLists.txt  main.cpp
examples/serial/send_single_bytes/: CMakeLists.txt  main.cpp
examples/timer/: CMakeLists.txt
examples/timer/ctc_with_interrupt/: CMakeLists.txt  interrupts.cpp  main.cpp
include/NextagEmbeddedPlatform/: peripherals.h
include/NextagEmbeddedPlatform/concepts/: concepts.h  typetraits.h
include/NextagEmbeddedPlatform/concepts/drivers/: timer.h
include/NextagEmbeddedPlatform/drivers/: digital_io.h  serial.h  timer.h  timer8bit.h  timer_clock.h  timer_mode.h  timer_result.h
include/NextagEmbeddedPlatform/interrupt/: interrupt_handlers.h  interrupt_registry.h  interrupts.h
include/NextagEmbeddedPlatform/pin_definitions/: pin_definitions.h
include/NextagEmbeddedPlatform/storage_containers/: array.h  circular_buffer.h  generic_data_iterator.h
src/drivers/: digital_io.cpp  digital_io_registers.h  serial.cpp  serial_registers.h  timer.cpp  timer8bit.cpp  timer8bit.h  timer_registers.h
src/interrupt/: interrupt_registry.cpp
tests/: CMakeLists.txt  main.cpp
tests/drivers/: CMakeLists.txt
tests/drivers/digital_io/: CMakeLists.txt  main.cpp
tests/drivers/serial/: CMakeLists.txt  main.cpp
tests/drivers/timer/: CMakeLists.txt  main.cpp
tests/storage_containers/: CMakeLists.txt
tests/storage_containers/array/: CMakeLists.txt  main.cpp
tests/storage_containers/circular_buffer/: CMakeLists.txt  main.cpp
tests/utils/: CMakeLists.txt
tests/utils/include/test_utils/: serial.h
tests/utils/src/: serial.cpp
toolchain/: avr_target_link_libraries.cmake
